Minor tweaks, custom button animations

--- a/2017 Scouting Collection/2017 Scouting Collection/Base.lproj/Main.storyboard
+++ b/2017 Scouting Collection/2017 Scouting Collection/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f30-Dx-MYX">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f30-Dx-MYX" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="20" y="628" width="984" height="125"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="125" id="JYk-PZ-gOV"/>
@@ -217,7 +217,7 @@
                                     <segue destination="hh0-KN-uQ1" kind="unwind" unwindAction="homeUnwindWithUnwindSegue:" id="bYD-ET-QZx"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="-2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JMr-mR-r8C">
+                            <button opaque="NO" tag="-2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JMr-mR-r8C" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="12" y="631" width="1000" height="125"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="125" id="Ri2-yr-6tJ"/>
@@ -306,7 +306,7 @@
                                     <segue destination="fQN-hr-nRT" kind="unwind" unwindAction="prematchUnwindWithUnwindSegue:" id="DNc-db-5Dd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vh5-T1-70W">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vh5-T1-70W" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="37" y="166.5" width="150" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="I2w-fD-kix"/>
@@ -320,7 +320,7 @@
                                     <action selector="SFButtonPressed:" destination="KP8-II-Zc9" eventType="touchUpInside" id="N3v-sc-ygZ"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-TU-uqP">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-TU-uqP" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="237" y="166.5" width="150" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Kkw-0h-cJL"/>
@@ -334,7 +334,7 @@
                                     <action selector="SFButtonPressed:" destination="KP8-II-Zc9" eventType="touchUpInside" id="T0s-45-4NP"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9sx-3M-JMb">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9sx-3M-JMb" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="437" y="166.5" width="150" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="VEL-lm-UOe"/>
@@ -348,7 +348,7 @@
                                     <action selector="SFButtonPressed:" destination="KP8-II-Zc9" eventType="touchUpInside" id="Svg-9o-nNt"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CVM-sB-ZnP">
+                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CVM-sB-ZnP" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="637" y="166.5" width="150" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="X74-q5-uJ1"/>
@@ -362,7 +362,7 @@
                                     <action selector="SFButtonPressed:" destination="KP8-II-Zc9" eventType="touchUpInside" id="rGK-Jx-ThN"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lL3-BG-tcy">
+                            <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lL3-BG-tcy" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="837" y="166.5" width="150" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="HEd-vj-bIR"/>
@@ -389,7 +389,7 @@
                                     <action selector="reachToggle:" destination="KP8-II-Zc9" eventType="touchUpInside" id="aDD-8O-vFd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bt-yd-ywR">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bt-yd-ywR" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="537" y="474.5" width="450" height="243.5"/>
                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="50"/>
                                 <state key="normal" title="High Goal">
@@ -399,7 +399,7 @@
                                     <action selector="SFButtonPressed:" destination="KP8-II-Zc9" eventType="touchUpInside" id="97O-2L-hmT"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ANN-p3-8a1">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ANN-p3-8a1" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
                                 <rect key="frame" x="37" y="474.5" width="450" height="243.5"/>
                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="50"/>
                                 <state key="normal" title="Low Goal">
@@ -410,8 +410,8 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Fk-tI-WBW">
-                                <rect key="frame" x="47" y="684" width="31.5" height="24"/>
-                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
+                                <rect key="frame" x="47" y="660" width="62.5" height="48"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -446,20 +446,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oZ6-AJ-ep1">
-                                <rect key="frame" x="547" y="684" width="31.5" height="24"/>
-                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
+                                <rect key="frame" x="547" y="660" width="62.5" height="48"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="F: 0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTm-7J-jkj">
-                                <rect key="frame" x="945.5" y="684" width="31.5" height="24"/>
-                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
+                                <rect key="frame" x="914.5" y="660" width="62.5" height="48"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="F: 0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPf-Ep-K4r">
-                                <rect key="frame" x="445.5" y="684" width="31.5" height="24"/>
-                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="20"/>
+                                <rect key="frame" x="414.5" y="660" width="62.5" height="48"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -610,17 +610,6 @@
                                     <action selector="buttonPressed:" destination="IQn-9a-Krn" eventType="touchUpInside" id="fiC-0x-dor"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwO-60-D9p">
-                                <rect key="frame" x="512" y="150" width="512" height="468"/>
-                                <color key="backgroundColor" red="0.0" green="0.80869494818652843" blue="0.065312002280844814" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <state key="normal" title="+ Success">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="buttonPressed:" destination="IQn-9a-Krn" eventType="touchUpInside" id="IX5-XZ-M6M"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhJ-5o-mDU">
                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="150"/>
                                 <color key="backgroundColor" red="0.89084763601036265" green="0.89084763601036265" blue="0.89084763601036265" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -647,6 +636,17 @@
                                 </state>
                                 <connections>
                                     <action selector="buttonPressed:" destination="IQn-9a-Krn" eventType="touchUpInside" id="uyw-mg-brv"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RwO-60-D9p" customClass="Button" customModule="_017_Scouting_Collection" customModuleProvider="target">
+                                <rect key="frame" x="512" y="150" width="512" height="468"/>
+                                <color key="backgroundColor" red="0.0" green="0.80869494818652843" blue="0.065312002280844814" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <state key="normal" title="+ Success">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="IQn-9a-Krn" eventType="touchUpInside" id="IX5-XZ-M6M"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qez-iL-bLO">
